java/sdk/resourcemanager/azure-resourcemanager-samples/src/test/resources/session-records/NetworkSampleTests.testManageNetworkSecurityGroup.json
{
  "Entries": [
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/rgnems15776bb6620?api-version=2022-09-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "Date": "Thu, 27 Jul 2023 01:55:41 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.resources/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "5083ba17-3ef3-4b77-8428-be1d255cb8b8",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "231",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:55:42 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "106f800d-f594-4b80-a422-388d75a9b89d",
        "x-ms-ratelimit-remaining-subscription-writes": "1183",
        "x-ms-request-id": "106f800d-f594-4b80-a422-388d75a9b89d",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015542Z:106f800d-f594-4b80-a422-388d75a9b89d"
      },
      "ResponseBody": {
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620",
        "name": "rgnems15776bb6620",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/virtualNetworks/vnet801077a11961?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "278",
        "Content-Type": "application/json",
        "Date": "Thu, 27 Jul 2023 01:55:42 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "4f341f28-a550-475d-9150-40efee8ca98f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus",
        "tags": {},
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "172.16.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": []
          },
          "subnets": [
            {
              "properties": {
                "addressPrefix": "172.16.2.0/24"
              },
              "name": "Back-end"
            },
            {
              "properties": {
                "addressPrefix": "172.16.1.0/24"
              },
              "name": "Front-end"
            }
          ]
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operations/17c3c265-6c33-4ef2-aa2d-aa1c46ad0ed2?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1517",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:55:44 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "e4852fed-5518-469b-8e3a-6d5c46e465a0",
        "x-ms-client-request-id": "4f341f28-a550-475d-9150-40efee8ca98f",
        "x-ms-correlation-request-id": "a649351b-3e7b-4442-b1f0-cf4d2de3cb20",
        "x-ms-ratelimit-remaining-subscription-writes": "1182",
        "x-ms-request-id": "17c3c265-6c33-4ef2-aa2d-aa1c46ad0ed2",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015544Z:a649351b-3e7b-4442-b1f0-cf4d2de3cb20"
      },
      "ResponseBody": {
        "name": "vnet801077a11961",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/virtualNetworks/vnet801077a11961",
        "etag": "W/\u0022118aebb8-2968-4909-87dd-6256c2ae1f32\u0022",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "8e2abb89-c7f7-43e3-a5d6-97a604e410c0",
          "addressSpace": {
            "addressPrefixes": [
              "172.16.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": []
          },
          "subnets": [
            {
              "name": "Back-end",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/virtualNetworks/vnet801077a11961/subnets/Back-end",
              "etag": "W/\u0022118aebb8-2968-4909-87dd-6256c2ae1f32\u0022",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "172.16.2.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            },
            {
              "name": "Front-end",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/virtualNetworks/vnet801077a11961/subnets/Front-end",
              "etag": "W/\u0022118aebb8-2968-4909-87dd-6256c2ae1f32\u0022",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "172.16.1.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/17c3c265-6c33-4ef2-aa2d-aa1c46ad0ed2?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:55:47 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "1bf3329b-2c72-48b2-a342-8e848dd52f3c",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:55:47 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f19ffcf8-ee29-460c-895e-9b1e43ba34f8",
        "x-ms-client-request-id": "1bf3329b-2c72-48b2-a342-8e848dd52f3c",
        "x-ms-correlation-request-id": "511db32e-df70-4640-b3c9-7e4c3fba54a6",
        "x-ms-ratelimit-remaining-subscription-reads": "11947",
        "x-ms-request-id": "9751f5d9-98ef-4e90-9092-8fa3a24379d3",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015548Z:511db32e-df70-4640-b3c9-7e4c3fba54a6"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/virtualNetworks/vnet801077a11961?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:55:47 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "1fbe4f73-9676-49bc-b0b7-9b4e3ced23b9",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1520",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:55:48 GMT",
        "ETag": "W/\u00225041762d-95f1-4986-b01b-fbc8e00cb4cc\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "7813104b-aa00-4cb9-8f9c-b3a91261c756",
        "x-ms-client-request-id": "1fbe4f73-9676-49bc-b0b7-9b4e3ced23b9",
        "x-ms-correlation-request-id": "4637e569-6283-405c-b82e-9b9d34cc4651",
        "x-ms-ratelimit-remaining-subscription-reads": "11946",
        "x-ms-request-id": "ab0f63ca-e8d7-4a6e-bbd0-7a49c21938bd",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015548Z:4637e569-6283-405c-b82e-9b9d34cc4651"
      },
      "ResponseBody": {
        "name": "vnet801077a11961",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/virtualNetworks/vnet801077a11961",
        "etag": "W/\u00225041762d-95f1-4986-b01b-fbc8e00cb4cc\u0022",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "8e2abb89-c7f7-43e3-a5d6-97a604e410c0",
          "addressSpace": {
            "addressPrefixes": [
              "172.16.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": []
          },
          "subnets": [
            {
              "name": "Back-end",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/virtualNetworks/vnet801077a11961/subnets/Back-end",
              "etag": "W/\u00225041762d-95f1-4986-b01b-fbc8e00cb4cc\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "172.16.2.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            },
            {
              "name": "Front-end",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/virtualNetworks/vnet801077a11961/subnets/Front-end",
              "etag": "W/\u00225041762d-95f1-4986-b01b-fbc8e00cb4cc\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "172.16.1.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/virtualNetworks/vnet801077a11961/virtualNetworkPeerings?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Thu, 27 Jul 2023 01:55:47 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "38fd25f5-8d4b-4708-9ed5-9fc85b3c6168",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "12",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:55:48 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "35a1215d-5783-459a-b085-d6d82cd5cfc7",
        "x-ms-client-request-id": "38fd25f5-8d4b-4708-9ed5-9fc85b3c6168",
        "x-ms-correlation-request-id": "73a1531c-808e-4536-99c7-319af4560ebf",
        "x-ms-ratelimit-remaining-subscription-reads": "11945",
        "x-ms-request-id": "cf4ddb10-3a68-444a-ab06-1c4746c536ae",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015548Z:73a1531c-808e-4536-99c7-319af4560ebf"
      },
      "ResponseBody": {
        "value": []
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/rgnems15776bb6620?api-version=2022-09-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "Date": "Thu, 27 Jul 2023 01:55:48 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.resources/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "95a0d280-96e1-42f5-8f57-72710cfeff24",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "231",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:55:50 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "7fd84703-4482-4c28-92c1-4b433aca208e",
        "x-ms-ratelimit-remaining-subscription-writes": "1178",
        "x-ms-request-id": "7fd84703-4482-4c28-92c1-4b433aca208e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015550Z:7fd84703-4482-4c28-92c1-4b433aca208e"
      },
      "ResponseBody": {
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620",
        "name": "rgnems15776bb6620",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "704",
        "Content-Type": "application/json",
        "Date": "Thu, 27 Jul 2023 01:55:49 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "5db4c770-2f71-4d3e-8213-7a3704225ee6",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus",
        "tags": {},
        "properties": {
          "securityRules": [
            {
              "properties": {
                "description": "Allow HTTP",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "sourceApplicationSecurityGroups": [],
                "destinationAddressPrefix": "*",
                "destinationApplicationSecurityGroups": [],
                "access": "Allow",
                "priority": 101,
                "direction": "Inbound"
              },
              "name": "ALLOW-HTTP"
            },
            {
              "properties": {
                "description": "Allow SSH",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "sourceApplicationSecurityGroups": [],
                "destinationAddressPrefix": "*",
                "destinationApplicationSecurityGroups": [],
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              },
              "name": "ALLOW-SSH"
            }
          ]
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operations/f05f3002-8690-41f2-8eb3-c9b82dc94fe4?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "6343",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:55:51 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2751012a-7f86-416b-9caf-2358b6681927",
        "x-ms-client-request-id": "5db4c770-2f71-4d3e-8213-7a3704225ee6",
        "x-ms-correlation-request-id": "b6db3fe3-04c7-43a6-b5dd-bc75da43fa61",
        "x-ms-ratelimit-remaining-subscription-writes": "1177",
        "x-ms-request-id": "f05f3002-8690-41f2-8eb3-c9b82dc94fe4",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015551Z:b6db3fe3-04c7-43a6-b5dd-bc75da43fa61"
      },
      "ResponseBody": {
        "name": "fensg287016ab2bf4",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4",
        "etag": "W/\u002236b75b25-5309-4209-82df-1f9ca19271a8\u0022",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "d1975851-4490-418a-a966-cd9ef9cf7527",
          "securityRules": [
            {
              "name": "ALLOW-HTTP",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/securityRules/ALLOW-HTTP",
              "etag": "W/\u002236b75b25-5309-4209-82df-1f9ca19271a8\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow HTTP",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 101,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "ALLOW-SSH",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/securityRules/ALLOW-SSH",
              "etag": "W/\u002236b75b25-5309-4209-82df-1f9ca19271a8\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow SSH",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\u002236b75b25-5309-4209-82df-1f9ca19271a8\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\u002236b75b25-5309-4209-82df-1f9ca19271a8\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\u002236b75b25-5309-4209-82df-1f9ca19271a8\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\u002236b75b25-5309-4209-82df-1f9ca19271a8\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\u002236b75b25-5309-4209-82df-1f9ca19271a8\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\u002236b75b25-5309-4209-82df-1f9ca19271a8\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/f05f3002-8690-41f2-8eb3-c9b82dc94fe4?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:55:51 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "5e651b59-b777-47bd-b216-e0a6586ca4c5",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:55:52 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "1c7c9973-b05c-4ab9-aece-175c4cc4ebb7",
        "x-ms-client-request-id": "5e651b59-b777-47bd-b216-e0a6586ca4c5",
        "x-ms-correlation-request-id": "3667f5ab-5e92-4b6d-84f8-a2b24140878f",
        "x-ms-ratelimit-remaining-subscription-reads": "11973",
        "x-ms-request-id": "d60e6620-aa70-4e96-879e-62d4345d725c",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015552Z:3667f5ab-5e92-4b6d-84f8-a2b24140878f"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:55:52 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "09503ff8-053a-426f-ad2c-24dbd6abe7b6",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "6352",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:55:53 GMT",
        "ETag": "W/\u00223de3f0d0-76ec-43f2-afb3-6b7485368674\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8cb0e9cb-0eca-4f81-afc9-670a784143ae",
        "x-ms-client-request-id": "09503ff8-053a-426f-ad2c-24dbd6abe7b6",
        "x-ms-correlation-request-id": "412f8739-6435-4c66-97e6-9ad0b4686630",
        "x-ms-ratelimit-remaining-subscription-reads": "11972",
        "x-ms-request-id": "e15ade2c-2d98-4b3d-a2f0-d0eafb8bc813",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015553Z:412f8739-6435-4c66-97e6-9ad0b4686630"
      },
      "ResponseBody": {
        "name": "fensg287016ab2bf4",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4",
        "etag": "W/\u00223de3f0d0-76ec-43f2-afb3-6b7485368674\u0022",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "d1975851-4490-418a-a966-cd9ef9cf7527",
          "securityRules": [
            {
              "name": "ALLOW-HTTP",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/securityRules/ALLOW-HTTP",
              "etag": "W/\u00223de3f0d0-76ec-43f2-afb3-6b7485368674\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow HTTP",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 101,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "ALLOW-SSH",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/securityRules/ALLOW-SSH",
              "etag": "W/\u00223de3f0d0-76ec-43f2-afb3-6b7485368674\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow SSH",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\u00223de3f0d0-76ec-43f2-afb3-6b7485368674\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\u00223de3f0d0-76ec-43f2-afb3-6b7485368674\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\u00223de3f0d0-76ec-43f2-afb3-6b7485368674\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\u00223de3f0d0-76ec-43f2-afb3-6b7485368674\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\u00223de3f0d0-76ec-43f2-afb3-6b7485368674\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\u00223de3f0d0-76ec-43f2-afb3-6b7485368674\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "711",
        "Content-Type": "application/json",
        "Date": "Thu, 27 Jul 2023 01:55:52 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "65bf466d-1586-495a-83b3-e3e0fb6f78c3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus",
        "tags": {},
        "properties": {
          "securityRules": [
            {
              "properties": {
                "description": "Allow SQL",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "1433",
                "sourceAddressPrefix": "172.16.1.0/24",
                "sourceApplicationSecurityGroups": [],
                "destinationAddressPrefix": "*",
                "destinationApplicationSecurityGroups": [],
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              },
              "name": "ALLOW-SQL"
            },
            {
              "properties": {
                "description": "Deny Web",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "sourceApplicationSecurityGroups": [],
                "destinationAddressPrefix": "*",
                "destinationApplicationSecurityGroups": [],
                "access": "Deny",
                "priority": 200,
                "direction": "Outbound"
              },
              "name": "DENY-WEB"
            }
          ]
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operations/66591234-4720-45b2-8530-6b96e3a3c4a5?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "6348",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:55:54 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "4856a384-dfd4-4979-adfc-9997955881d7",
        "x-ms-client-request-id": "65bf466d-1586-495a-83b3-e3e0fb6f78c3",
        "x-ms-correlation-request-id": "eb359b1c-66e8-4235-9cff-09fc2933c9ae",
        "x-ms-ratelimit-remaining-subscription-writes": "1187",
        "x-ms-request-id": "66591234-4720-45b2-8530-6b96e3a3c4a5",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015554Z:eb359b1c-66e8-4235-9cff-09fc2933c9ae"
      },
      "ResponseBody": {
        "name": "bensg54509dddd3de",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de",
        "etag": "W/\u002223e4384a-9ddf-4d5b-a8d2-46f4acbedad1\u0022",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "b300c5f9-5a74-45d0-b8fd-72d7df089211",
          "securityRules": [
            {
              "name": "ALLOW-SQL",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/securityRules/ALLOW-SQL",
              "etag": "W/\u002223e4384a-9ddf-4d5b-a8d2-46f4acbedad1\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow SQL",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "1433",
                "sourceAddressPrefix": "172.16.1.0/24",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DENY-WEB",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/securityRules/DENY-WEB",
              "etag": "W/\u002223e4384a-9ddf-4d5b-a8d2-46f4acbedad1\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny Web",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 200,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\u002223e4384a-9ddf-4d5b-a8d2-46f4acbedad1\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\u002223e4384a-9ddf-4d5b-a8d2-46f4acbedad1\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\u002223e4384a-9ddf-4d5b-a8d2-46f4acbedad1\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\u002223e4384a-9ddf-4d5b-a8d2-46f4acbedad1\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\u002223e4384a-9ddf-4d5b-a8d2-46f4acbedad1\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\u002223e4384a-9ddf-4d5b-a8d2-46f4acbedad1\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/66591234-4720-45b2-8530-6b96e3a3c4a5?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:55:54 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "8629bf09-8ab8-453e-a0d0-a33384574528",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:55:55 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "24fe038f-ec04-4fd2-8fdf-02f23356e1d5",
        "x-ms-client-request-id": "8629bf09-8ab8-453e-a0d0-a33384574528",
        "x-ms-correlation-request-id": "b19c65bd-63e0-44a0-9bf7-dd25f2b37f8a",
        "x-ms-ratelimit-remaining-subscription-reads": "11956",
        "x-ms-request-id": "daba7057-701f-4a64-af9b-dbf5414ecc49",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015556Z:b19c65bd-63e0-44a0-9bf7-dd25f2b37f8a"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:55:55 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "c700991b-08f4-44f9-a7ea-6f9db008e0a1",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "6357",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:55:55 GMT",
        "ETag": "W/\u00225f40cf22-1fa0-4e9c-9c17-896f498c5e47\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "83cbeb1a-789b-4a7f-b99f-58e1f0122ee1",
        "x-ms-client-request-id": "c700991b-08f4-44f9-a7ea-6f9db008e0a1",
        "x-ms-correlation-request-id": "bd8bd87f-7df0-476e-8a25-669b57d88dc7",
        "x-ms-ratelimit-remaining-subscription-reads": "11955",
        "x-ms-request-id": "aad8aa2d-96ac-46eb-810e-43269a81aff0",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015556Z:bd8bd87f-7df0-476e-8a25-669b57d88dc7"
      },
      "ResponseBody": {
        "name": "bensg54509dddd3de",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de",
        "etag": "W/\u00225f40cf22-1fa0-4e9c-9c17-896f498c5e47\u0022",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "b300c5f9-5a74-45d0-b8fd-72d7df089211",
          "securityRules": [
            {
              "name": "ALLOW-SQL",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/securityRules/ALLOW-SQL",
              "etag": "W/\u00225f40cf22-1fa0-4e9c-9c17-896f498c5e47\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow SQL",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "1433",
                "sourceAddressPrefix": "172.16.1.0/24",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DENY-WEB",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/securityRules/DENY-WEB",
              "etag": "W/\u00225f40cf22-1fa0-4e9c-9c17-896f498c5e47\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny Web",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 200,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\u00225f40cf22-1fa0-4e9c-9c17-896f498c5e47\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\u00225f40cf22-1fa0-4e9c-9c17-896f498c5e47\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\u00225f40cf22-1fa0-4e9c-9c17-896f498c5e47\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\u00225f40cf22-1fa0-4e9c-9c17-896f498c5e47\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\u00225f40cf22-1fa0-4e9c-9c17-896f498c5e47\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\u00225f40cf22-1fa0-4e9c-9c17-896f498c5e47\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/publicIPAddresses/pip49416a69?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "99",
        "Content-Type": "application/json",
        "Date": "Thu, 27 Jul 2023 01:55:55 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "29470bf6-9e3f-4959-83f3-e2d8afa2ecee",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus",
        "tags": {},
        "properties": {
          "dnsSettings": {
            "domainNameLabel": "pip108910a3e2126"
          }
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operations/13980cf1-1c27-4e02-acc9-28445729b6c6?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "651",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:55:57 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "19ac1b07-a64c-445e-95ed-169d7c1d1f39",
        "x-ms-client-request-id": "29470bf6-9e3f-4959-83f3-e2d8afa2ecee",
        "x-ms-correlation-request-id": "21719249-d90b-4d7c-a507-1ccee076acc9",
        "x-ms-ratelimit-remaining-subscription-writes": "1187",
        "x-ms-request-id": "13980cf1-1c27-4e02-acc9-28445729b6c6",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015558Z:21719249-d90b-4d7c-a507-1ccee076acc9"
      },
      "ResponseBody": {
        "name": "pip49416a69",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/publicIPAddresses/pip49416a69",
        "etag": "W/\u00225f165b25-cd0e-419e-9e38-d2f43a1f8de8\u0022",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "4c0f049a-d624-46ec-92c8-0cbe442bcb03",
          "publicIPAddressVersion": "IPv4",
          "publicIPAllocationMethod": "Dynamic",
          "idleTimeoutInMinutes": 4,
          "dnsSettings": {
            "domainNameLabel": "pip108910a3e2126",
            "fqdn": "pip108910a3e2126.westus.cloudapp.azure.com"
          },
          "ipTags": []
        },
        "type": "Microsoft.Network/publicIPAddresses",
        "sku": {
          "name": "Basic",
          "tier": "Regional"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/13980cf1-1c27-4e02-acc9-28445729b6c6?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:55:58 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "16f3990d-ecf0-4f45-ad4c-5119485d553d",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "23",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:55:59 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "dd1aa8fd-6327-4d02-8946-2c3d6d80a994",
        "x-ms-client-request-id": "16f3990d-ecf0-4f45-ad4c-5119485d553d",
        "x-ms-correlation-request-id": "dea073ab-cfc3-4ef5-8342-c58e3aca4055",
        "x-ms-ratelimit-remaining-subscription-reads": "11939",
        "x-ms-request-id": "09f2038c-7ca1-4d56-b4f4-2bfdc469a62a",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015559Z:dea073ab-cfc3-4ef5-8342-c58e3aca4055"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/13980cf1-1c27-4e02-acc9-28445729b6c6?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:56:00 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "90d3ec9b-0a73-4586-987a-6e0f6846ca80",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:56:02 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "d3fe73be-dea1-4f10-acfe-36a678861715",
        "x-ms-client-request-id": "90d3ec9b-0a73-4586-987a-6e0f6846ca80",
        "x-ms-correlation-request-id": "3000cb9b-49ae-4841-8fbb-677ea443b78e",
        "x-ms-ratelimit-remaining-subscription-reads": "11970",
        "x-ms-request-id": "23c9da23-2e34-4dbd-980a-34b3ae9e4bd1",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015602Z:3000cb9b-49ae-4841-8fbb-677ea443b78e"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/publicIPAddresses/pip49416a69?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:56:01 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "4f701267-c6c8-4d57-bc40-934c18dc2019",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "652",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:56:02 GMT",
        "ETag": "W/\u002241fefc53-23a5-427c-8c00-208d9ec176f3\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "553ec2f6-0235-470c-b34f-13ace09ab122",
        "x-ms-client-request-id": "4f701267-c6c8-4d57-bc40-934c18dc2019",
        "x-ms-correlation-request-id": "67a93751-de85-4ee2-89fd-16b3b60dccb0",
        "x-ms-ratelimit-remaining-subscription-reads": "11969",
        "x-ms-request-id": "8719c0a1-e9df-4ba4-9f45-fb101500c972",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015602Z:67a93751-de85-4ee2-89fd-16b3b60dccb0"
      },
      "ResponseBody": {
        "name": "pip49416a69",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/publicIPAddresses/pip49416a69",
        "etag": "W/\u002241fefc53-23a5-427c-8c00-208d9ec176f3\u0022",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "4c0f049a-d624-46ec-92c8-0cbe442bcb03",
          "publicIPAddressVersion": "IPv4",
          "publicIPAllocationMethod": "Dynamic",
          "idleTimeoutInMinutes": 4,
          "dnsSettings": {
            "domainNameLabel": "pip108910a3e2126",
            "fqdn": "pip108910a3e2126.westus.cloudapp.azure.com"
          },
          "ipTags": []
        },
        "type": "Microsoft.Network/publicIPAddresses",
        "sku": {
          "name": "Basic",
          "tier": "Regional"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic188633bdefa76?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "734",
        "Content-Type": "application/json",
        "Date": "Thu, 27 Jul 2023 01:56:02 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "b5dcd836-95e2-4041-af42-d716b8c630a1",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus",
        "tags": {},
        "properties": {
          "networkSecurityGroup": {
            "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4"
          },
          "ipConfigurations": [
            {
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/virtualNetworks/vnet801077a11961/subnets/Front-end"
                },
                "primary": true,
                "publicIPAddress": {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/publicIPAddresses/pip49416a69"
                }
              },
              "name": "primary"
            }
          ],
          "dnsSettings": {},
          "enableIPForwarding": true
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operations/42886ee2-7a82-464d-8347-2704e9801c1d?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1824",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:56:03 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "83fdb448-b253-4437-8eb0-c7aac058e753",
        "x-ms-client-request-id": "b5dcd836-95e2-4041-af42-d716b8c630a1",
        "x-ms-correlation-request-id": "f171c0c6-e61a-46b2-ad70-1c8ea2fabe9a",
        "x-ms-ratelimit-remaining-subscription-writes": "1184",
        "x-ms-request-id": "42886ee2-7a82-464d-8347-2704e9801c1d",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015603Z:f171c0c6-e61a-46b2-ad70-1c8ea2fabe9a"
      },
      "ResponseBody": {
        "name": "nic188633bdefa76",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic188633bdefa76",
        "etag": "W/\u002270debcb4-7073-4193-9d91-d5c198364e8e\u0022",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "bc5ab7e9-eb6e-405f-b3ee-2ece794519c6",
          "ipConfigurations": [
            {
              "name": "primary",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic188633bdefa76/ipConfigurations/primary",
              "etag": "W/\u002270debcb4-7073-4193-9d91-d5c198364e8e\u0022",
              "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
              "properties": {
                "provisioningState": "Succeeded",
                "privateIPAddress": "172.16.1.4",
                "privateIPAllocationMethod": "Dynamic",
                "publicIPAddress": {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/publicIPAddresses/pip49416a69"
                },
                "subnet": {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/virtualNetworks/vnet801077a11961/subnets/Front-end"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "dnsSettings": {
            "dnsServers": [],
            "appliedDnsServers": [],
            "internalDomainNameSuffix": "rg3svdxxy5ruhjows4tajzaqya.dx.internal.cloudapp.net"
          },
          "vnetEncryptionSupported": false,
          "enableIPForwarding": true,
          "disableTcpStateTracking": false,
          "networkSecurityGroup": {
            "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4"
          },
          "hostedWorkloads": [],
          "tapConfigurations": [],
          "nicType": "Standard",
          "allowPort25Out": true,
          "nicAuxiliarySkuBillingNotificationType": "NoOp"
        },
        "type": "Microsoft.Network/networkInterfaces",
        "location": "westus",
        "kind": "Regular"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic277474ff42884?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "537",
        "Content-Type": "application/json",
        "Date": "Thu, 27 Jul 2023 01:56:03 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "d5edad28-3655-4df8-8ec1-24c173447a00",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus",
        "tags": {},
        "properties": {
          "networkSecurityGroup": {
            "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de"
          },
          "ipConfigurations": [
            {
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/virtualNetworks/vnet801077a11961/subnets/Back-end"
                },
                "primary": true
              },
              "name": "primary"
            }
          ],
          "dnsSettings": {}
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operations/0f62e46c-ea86-40dd-8c65-916837d97449?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1654",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:56:04 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "27f4c31e-78e7-4f68-84ad-59b80f599436",
        "x-ms-client-request-id": "d5edad28-3655-4df8-8ec1-24c173447a00",
        "x-ms-correlation-request-id": "b1c82376-5234-41d9-906e-8ab79cb4ed27",
        "x-ms-ratelimit-remaining-subscription-writes": "1183",
        "x-ms-request-id": "0f62e46c-ea86-40dd-8c65-916837d97449",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015604Z:b1c82376-5234-41d9-906e-8ab79cb4ed27"
      },
      "ResponseBody": {
        "name": "nic277474ff42884",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic277474ff42884",
        "etag": "W/\u00227ef83919-25cb-4dca-a29d-ce5e1fd06859\u0022",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "bcb3981f-afd3-46fa-8377-206a1ae1b3fa",
          "ipConfigurations": [
            {
              "name": "primary",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic277474ff42884/ipConfigurations/primary",
              "etag": "W/\u00227ef83919-25cb-4dca-a29d-ce5e1fd06859\u0022",
              "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
              "properties": {
                "provisioningState": "Succeeded",
                "privateIPAddress": "172.16.2.4",
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/virtualNetworks/vnet801077a11961/subnets/Back-end"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "dnsSettings": {
            "dnsServers": [],
            "appliedDnsServers": [],
            "internalDomainNameSuffix": "rg3svdxxy5ruhjows4tajzaqya.dx.internal.cloudapp.net"
          },
          "vnetEncryptionSupported": false,
          "enableIPForwarding": false,
          "disableTcpStateTracking": false,
          "networkSecurityGroup": {
            "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de"
          },
          "hostedWorkloads": [],
          "tapConfigurations": [],
          "nicType": "Standard",
          "allowPort25Out": true,
          "nicAuxiliarySkuBillingNotificationType": "NoOp"
        },
        "type": "Microsoft.Network/networkInterfaces",
        "location": "westus",
        "kind": "Regular"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Compute/virtualMachines/fevm39775f13d325?api-version=2023-03-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "997",
        "Content-Type": "application/json",
        "Date": "Thu, 27 Jul 2023 01:56:04 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.compute/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "1b888b39-89fa-41be-8bef-be0b6d335043",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus",
        "tags": {},
        "properties": {
          "hardwareProfile": {
            "vmSize": "Standard_D2a_v4"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "Canonical",
              "offer": "UbuntuServer",
              "sku": "16.04.0-LTS",
              "version": "latest"
            },
            "osDisk": {
              "caching": "ReadWrite",
              "createOption": "FromImage",
              "managedDisk": {
                "storageAccountType": "Standard_LRS"
              }
            }
          },
          "osProfile": {
            "computerName": "vm996678dd1",
            "adminUsername": "tirekicker",
            "linuxConfiguration": {
              "disablePasswordAuthentication": true,
              "ssh": {
                "publicKeys": [
                  {
                    "path": "/home/tirekicker/.ssh/authorized_keys",
                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAAAgQCfhqMgZPSY1W4QYVYJJ8KOQ0Bqo2JrcIXNMRUvr\u002B\u002B4ZfcNtF26OJ6muAWmHmm4xMop5fHlR4bMwjmY9wjacZkBKFqkXuHqOdCfZn1KmrJy7v40L3znV2MtM5/Eglmoa2gt2z2JqgmR3P04pMz2XwZ89GX0bMNWN0ZMw00wEFv7hQ== SSHCerts\n"
                  }
                ]
              }
            }
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic188633bdefa76",
                "properties": {
                  "primary": true
                }
              }
            ]
          }
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Compute/locations/westus/operations/bac05754-f168-4ad6-8997-eb2eb37bfecd?p=ce71cbb8-84e0-440e-b69e-9e5ddfe1c24c\u0026api-version=2023-03-01",
        "Cache-Control": "no-cache",
        "Content-Length": "2339",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:56:07 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-client-request-id": "1b888b39-89fa-41be-8bef-be0b6d335043",
        "x-ms-correlation-request-id": "96f98a01-b9dd-4fb9-998c-153693964fc9",
        "x-ms-ratelimit-remaining-resource": "Microsoft.Compute/PutVM3Min;231,Microsoft.Compute/PutVM30Min;1191",
        "x-ms-ratelimit-remaining-subscription-writes": "1180",
        "x-ms-request-id": "bac05754-f168-4ad6-8997-eb2eb37bfecd",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015607Z:96f98a01-b9dd-4fb9-998c-153693964fc9"
      },
      "ResponseBody": {
        "name": "fevm39775f13d325",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Compute/virtualMachines/fevm39775f13d325",
        "type": "Microsoft.Compute/virtualMachines",
        "location": "westus",
        "tags": {
          "azsecpack": "nonprod",
          "platformsettings.host_environment.service.platform_optedin_for_rootcerts": "true"
        },
        "properties": {
          "vmId": "38081050-d617-43b6-bf6b-3c772ef34ba4",
          "hardwareProfile": {
            "vmSize": "Standard_D2a_v4"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "Canonical",
              "offer": "UbuntuServer",
              "sku": "16.04.0-LTS",
              "version": "latest",
              "exactVersion": "16.04.202109280"
            },
            "osDisk": {
              "osType": "Linux",
              "createOption": "FromImage",
              "caching": "ReadWrite",
              "managedDisk": {
                "storageAccountType": "Standard_LRS"
              },
              "deleteOption": "Detach",
              "diskSizeGB": 30
            },
            "dataDisks": []
          },
          "osProfile": {
            "computerName": "vm996678dd1",
            "adminUsername": "tirekicker",
            "linuxConfiguration": {
              "disablePasswordAuthentication": true,
              "ssh": {
                "publicKeys": [
                  {
                    "path": "/home/tirekicker/.ssh/authorized_keys",
                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAAAgQCfhqMgZPSY1W4QYVYJJ8KOQ0Bqo2JrcIXNMRUvr\u002B\u002B4ZfcNtF26OJ6muAWmHmm4xMop5fHlR4bMwjmY9wjacZkBKFqkXuHqOdCfZn1KmrJy7v40L3znV2MtM5/Eglmoa2gt2z2JqgmR3P04pMz2XwZ89GX0bMNWN0ZMw00wEFv7hQ== SSHCerts\n"
                  }
                ]
              },
              "provisionVMAgent": true,
              "patchSettings": {
                "patchMode": "ImageDefault",
                "assessmentMode": "ImageDefault"
              },
              "enableVMAgentPlatformUpdates": false
            },
            "secrets": [],
            "allowExtensionOperations": true,
            "requireGuestProvisionSignal": true
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic188633bdefa76",
                "properties": {
                  "primary": true
                }
              }
            ]
          },
          "provisioningState": "Creating",
          "timeCreated": "2023-07-27T01:56:05.7454098\u002B00:00"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Compute/locations/westus/operations/bac05754-f168-4ad6-8997-eb2eb37bfecd?p=ce71cbb8-84e0-440e-b69e-9e5ddfe1c24c\u0026api-version=2023-03-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:56:17 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.compute/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "c8022935-42ca-4bec-bff6-e8f0d094295a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "134",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:56:17 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-client-request-id": "c8022935-42ca-4bec-bff6-e8f0d094295a",
        "x-ms-correlation-request-id": "37d1d97b-fe24-4ee6-9243-134ce33c0a13",
        "x-ms-ratelimit-remaining-resource": "Microsoft.Compute/GetOperation3Min;14982,Microsoft.Compute/GetOperation30Min;29982",
        "x-ms-ratelimit-remaining-subscription-reads": "11927",
        "x-ms-request-id": "c88439e7-9bc6-4ba5-8d9a-64865d0350ab",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015618Z:37d1d97b-fe24-4ee6-9243-134ce33c0a13"
      },
      "ResponseBody": {
        "startTime": "2023-07-27T01:56:05.7454098\u002B00:00",
        "status": "InProgress",
        "name": "bac05754-f168-4ad6-8997-eb2eb37bfecd"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Compute/locations/westus/operations/bac05754-f168-4ad6-8997-eb2eb37bfecd?p=ce71cbb8-84e0-440e-b69e-9e5ddfe1c24c\u0026api-version=2023-03-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:56:52 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.compute/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "b13fe31e-7dcf-474b-91fb-065585c5956a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "184",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:56:52 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-client-request-id": "b13fe31e-7dcf-474b-91fb-065585c5956a",
        "x-ms-correlation-request-id": "ee5be991-7373-4aaf-8b78-0b3f7211bfd5",
        "x-ms-ratelimit-remaining-resource": "Microsoft.Compute/GetOperation3Min;14975,Microsoft.Compute/GetOperation30Min;29975",
        "x-ms-ratelimit-remaining-subscription-reads": "11976",
        "x-ms-request-id": "d28b7d7c-6116-4d69-b720-8e4f6ea14bf7",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015653Z:ee5be991-7373-4aaf-8b78-0b3f7211bfd5"
      },
      "ResponseBody": {
        "startTime": "2023-07-27T01:56:05.7454098\u002B00:00",
        "endTime": "2023-07-27T01:56:26.2612873\u002B00:00",
        "status": "Succeeded",
        "name": "bac05754-f168-4ad6-8997-eb2eb37bfecd"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Compute/virtualMachines/fevm39775f13d325?api-version=2023-03-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:56:52 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.compute/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "2cc73a64-8da2-461d-807b-c12132b07a49",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "2617",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:56:53 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-client-request-id": "2cc73a64-8da2-461d-807b-c12132b07a49",
        "x-ms-correlation-request-id": "eabc8f87-35dc-4b8e-89a9-3f686664b5b6",
        "x-ms-ratelimit-remaining-resource": "Microsoft.Compute/LowCostGet3Min;3968,Microsoft.Compute/LowCostGet30Min;31972",
        "x-ms-ratelimit-remaining-subscription-reads": "11975",
        "x-ms-request-id": "027dddf8-41eb-4d03-a4e7-4aca18213833",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015653Z:eabc8f87-35dc-4b8e-89a9-3f686664b5b6"
      },
      "ResponseBody": {
        "name": "fevm39775f13d325",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Compute/virtualMachines/fevm39775f13d325",
        "type": "Microsoft.Compute/virtualMachines",
        "location": "westus",
        "tags": {
          "azsecpack": "nonprod",
          "platformsettings.host_environment.service.platform_optedin_for_rootcerts": "true"
        },
        "properties": {
          "vmId": "38081050-d617-43b6-bf6b-3c772ef34ba4",
          "hardwareProfile": {
            "vmSize": "Standard_D2a_v4"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "Canonical",
              "offer": "UbuntuServer",
              "sku": "16.04.0-LTS",
              "version": "latest",
              "exactVersion": "16.04.202109280"
            },
            "osDisk": {
              "osType": "Linux",
              "name": "fevm39775f13d325_OsDisk_1_d37b839600084f1190d6a27c94f000c6",
              "createOption": "FromImage",
              "caching": "ReadWrite",
              "managedDisk": {
                "storageAccountType": "Standard_LRS",
                "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Compute/disks/fevm39775f13d325_OsDisk_1_d37b839600084f1190d6a27c94f000c6"
              },
              "deleteOption": "Detach",
              "diskSizeGB": 30
            },
            "dataDisks": []
          },
          "osProfile": {
            "computerName": "vm996678dd1",
            "adminUsername": "tirekicker",
            "linuxConfiguration": {
              "disablePasswordAuthentication": true,
              "ssh": {
                "publicKeys": [
                  {
                    "path": "/home/tirekicker/.ssh/authorized_keys",
                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAAAgQCfhqMgZPSY1W4QYVYJJ8KOQ0Bqo2JrcIXNMRUvr\u002B\u002B4ZfcNtF26OJ6muAWmHmm4xMop5fHlR4bMwjmY9wjacZkBKFqkXuHqOdCfZn1KmrJy7v40L3znV2MtM5/Eglmoa2gt2z2JqgmR3P04pMz2XwZ89GX0bMNWN0ZMw00wEFv7hQ== SSHCerts\n"
                  }
                ]
              },
              "provisionVMAgent": true,
              "patchSettings": {
                "patchMode": "ImageDefault",
                "assessmentMode": "ImageDefault"
              },
              "enableVMAgentPlatformUpdates": false
            },
            "secrets": [],
            "allowExtensionOperations": true,
            "requireGuestProvisionSignal": true
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic188633bdefa76",
                "properties": {
                  "primary": true
                }
              }
            ]
          },
          "provisioningState": "Succeeded",
          "timeCreated": "2023-07-27T01:56:05.7454098\u002B00:00"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Compute/virtualMachines/bevm29412cc08bd8?api-version=2023-03-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "997",
        "Content-Type": "application/json",
        "Date": "Thu, 27 Jul 2023 01:56:52 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.compute/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "a5b27817-8b20-404d-9b5e-ad37e6ce145a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus",
        "tags": {},
        "properties": {
          "hardwareProfile": {
            "vmSize": "Standard_D2a_v4"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "Canonical",
              "offer": "UbuntuServer",
              "sku": "16.04.0-LTS",
              "version": "latest"
            },
            "osDisk": {
              "caching": "ReadWrite",
              "createOption": "FromImage",
              "managedDisk": {
                "storageAccountType": "Standard_LRS"
              }
            }
          },
          "osProfile": {
            "computerName": "vm132365237",
            "adminUsername": "tirekicker",
            "linuxConfiguration": {
              "disablePasswordAuthentication": true,
              "ssh": {
                "publicKeys": [
                  {
                    "path": "/home/tirekicker/.ssh/authorized_keys",
                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAAAgQCfhqMgZPSY1W4QYVYJJ8KOQ0Bqo2JrcIXNMRUvr\u002B\u002B4ZfcNtF26OJ6muAWmHmm4xMop5fHlR4bMwjmY9wjacZkBKFqkXuHqOdCfZn1KmrJy7v40L3znV2MtM5/Eglmoa2gt2z2JqgmR3P04pMz2XwZ89GX0bMNWN0ZMw00wEFv7hQ== SSHCerts\n"
                  }
                ]
              }
            }
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic277474ff42884",
                "properties": {
                  "primary": true
                }
              }
            ]
          }
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Compute/locations/westus/operations/a673a1a9-ab35-407d-b7d1-f5f5646e6f88?p=ce71cbb8-84e0-440e-b69e-9e5ddfe1c24c\u0026api-version=2023-03-01",
        "Cache-Control": "no-cache",
        "Content-Length": "2339",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:56:56 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-client-request-id": "a5b27817-8b20-404d-9b5e-ad37e6ce145a",
        "x-ms-correlation-request-id": "66371c0e-5aaa-4d5f-a790-d4d20790b8bb",
        "x-ms-ratelimit-remaining-resource": "Microsoft.Compute/PutVM3Min;229,Microsoft.Compute/PutVM30Min;1189",
        "x-ms-ratelimit-remaining-subscription-writes": "1185",
        "x-ms-request-id": "a673a1a9-ab35-407d-b7d1-f5f5646e6f88",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015657Z:66371c0e-5aaa-4d5f-a790-d4d20790b8bb"
      },
      "ResponseBody": {
        "name": "bevm29412cc08bd8",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Compute/virtualMachines/bevm29412cc08bd8",
        "type": "Microsoft.Compute/virtualMachines",
        "location": "westus",
        "tags": {
          "azsecpack": "nonprod",
          "platformsettings.host_environment.service.platform_optedin_for_rootcerts": "true"
        },
        "properties": {
          "vmId": "aead6b5a-099a-45b6-84c5-46991df34a9c",
          "hardwareProfile": {
            "vmSize": "Standard_D2a_v4"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "Canonical",
              "offer": "UbuntuServer",
              "sku": "16.04.0-LTS",
              "version": "latest",
              "exactVersion": "16.04.202109280"
            },
            "osDisk": {
              "osType": "Linux",
              "createOption": "FromImage",
              "caching": "ReadWrite",
              "managedDisk": {
                "storageAccountType": "Standard_LRS"
              },
              "deleteOption": "Detach",
              "diskSizeGB": 30
            },
            "dataDisks": []
          },
          "osProfile": {
            "computerName": "vm132365237",
            "adminUsername": "tirekicker",
            "linuxConfiguration": {
              "disablePasswordAuthentication": true,
              "ssh": {
                "publicKeys": [
                  {
                    "path": "/home/tirekicker/.ssh/authorized_keys",
                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAAAgQCfhqMgZPSY1W4QYVYJJ8KOQ0Bqo2JrcIXNMRUvr\u002B\u002B4ZfcNtF26OJ6muAWmHmm4xMop5fHlR4bMwjmY9wjacZkBKFqkXuHqOdCfZn1KmrJy7v40L3znV2MtM5/Eglmoa2gt2z2JqgmR3P04pMz2XwZ89GX0bMNWN0ZMw00wEFv7hQ== SSHCerts\n"
                  }
                ]
              },
              "provisionVMAgent": true,
              "patchSettings": {
                "patchMode": "ImageDefault",
                "assessmentMode": "ImageDefault"
              },
              "enableVMAgentPlatformUpdates": false
            },
            "secrets": [],
            "allowExtensionOperations": true,
            "requireGuestProvisionSignal": true
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic277474ff42884",
                "properties": {
                  "primary": true
                }
              }
            ]
          },
          "provisioningState": "Creating",
          "timeCreated": "2023-07-27T01:56:54.6053498\u002B00:00"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Compute/locations/westus/operations/a673a1a9-ab35-407d-b7d1-f5f5646e6f88?p=ce71cbb8-84e0-440e-b69e-9e5ddfe1c24c\u0026api-version=2023-03-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:57:06 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.compute/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "09682c8c-3bcd-4a06-9eea-717d7955448c",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "134",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:57:07 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-client-request-id": "09682c8c-3bcd-4a06-9eea-717d7955448c",
        "x-ms-correlation-request-id": "fe515e82-d08e-4fd2-9379-6b3ac706a8dd",
        "x-ms-ratelimit-remaining-resource": "Microsoft.Compute/GetOperation3Min;14970,Microsoft.Compute/GetOperation30Min;29970",
        "x-ms-ratelimit-remaining-subscription-reads": "11992",
        "x-ms-request-id": "d7640142-2424-4320-af92-4314d0bfd235",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015707Z:fe515e82-d08e-4fd2-9379-6b3ac706a8dd"
      },
      "ResponseBody": {
        "startTime": "2023-07-27T01:56:54.6053498\u002B00:00",
        "status": "InProgress",
        "name": "a673a1a9-ab35-407d-b7d1-f5f5646e6f88"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Compute/locations/westus/operations/a673a1a9-ab35-407d-b7d1-f5f5646e6f88?p=ce71cbb8-84e0-440e-b69e-9e5ddfe1c24c\u0026api-version=2023-03-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:57:42 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.compute/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "2efe63eb-a504-472d-9fbc-a5e3900256fa",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "184",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:57:43 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-client-request-id": "2efe63eb-a504-472d-9fbc-a5e3900256fa",
        "x-ms-correlation-request-id": "a455e71c-9245-48bd-958b-55e4780cb914",
        "x-ms-ratelimit-remaining-resource": "Microsoft.Compute/GetOperation3Min;14961,Microsoft.Compute/GetOperation30Min;29960",
        "x-ms-ratelimit-remaining-subscription-reads": "11985",
        "x-ms-request-id": "0ecfb6c0-ea74-4fe7-bd74-e2c98652c9a3",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015743Z:a455e71c-9245-48bd-958b-55e4780cb914"
      },
      "ResponseBody": {
        "startTime": "2023-07-27T01:56:54.6053498\u002B00:00",
        "endTime": "2023-07-27T01:57:15.0430908\u002B00:00",
        "status": "Succeeded",
        "name": "a673a1a9-ab35-407d-b7d1-f5f5646e6f88"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Compute/virtualMachines/bevm29412cc08bd8?api-version=2023-03-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:57:43 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.compute/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "5ff272b4-632e-448d-9b69-6ae7712c701a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "2617",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:57:44 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-client-request-id": "5ff272b4-632e-448d-9b69-6ae7712c701a",
        "x-ms-correlation-request-id": "75d27f2d-47db-4ad7-8639-f2a4600230b8",
        "x-ms-ratelimit-remaining-resource": "Microsoft.Compute/LowCostGet3Min;3953,Microsoft.Compute/LowCostGet30Min;31957",
        "x-ms-ratelimit-remaining-subscription-reads": "11984",
        "x-ms-request-id": "d918084c-7d48-4792-923c-b7f87adde5e0",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015744Z:75d27f2d-47db-4ad7-8639-f2a4600230b8"
      },
      "ResponseBody": {
        "name": "bevm29412cc08bd8",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Compute/virtualMachines/bevm29412cc08bd8",
        "type": "Microsoft.Compute/virtualMachines",
        "location": "westus",
        "tags": {
          "azsecpack": "nonprod",
          "platformsettings.host_environment.service.platform_optedin_for_rootcerts": "true"
        },
        "properties": {
          "vmId": "aead6b5a-099a-45b6-84c5-46991df34a9c",
          "hardwareProfile": {
            "vmSize": "Standard_D2a_v4"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "Canonical",
              "offer": "UbuntuServer",
              "sku": "16.04.0-LTS",
              "version": "latest",
              "exactVersion": "16.04.202109280"
            },
            "osDisk": {
              "osType": "Linux",
              "name": "bevm29412cc08bd8_OsDisk_1_fa4e028b61484e2993bd0eab0e6ac1e2",
              "createOption": "FromImage",
              "caching": "ReadWrite",
              "managedDisk": {
                "storageAccountType": "Standard_LRS",
                "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Compute/disks/bevm29412cc08bd8_OsDisk_1_fa4e028b61484e2993bd0eab0e6ac1e2"
              },
              "deleteOption": "Detach",
              "diskSizeGB": 30
            },
            "dataDisks": []
          },
          "osProfile": {
            "computerName": "vm132365237",
            "adminUsername": "tirekicker",
            "linuxConfiguration": {
              "disablePasswordAuthentication": true,
              "ssh": {
                "publicKeys": [
                  {
                    "path": "/home/tirekicker/.ssh/authorized_keys",
                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAAAgQCfhqMgZPSY1W4QYVYJJ8KOQ0Bqo2JrcIXNMRUvr\u002B\u002B4ZfcNtF26OJ6muAWmHmm4xMop5fHlR4bMwjmY9wjacZkBKFqkXuHqOdCfZn1KmrJy7v40L3znV2MtM5/Eglmoa2gt2z2JqgmR3P04pMz2XwZ89GX0bMNWN0ZMw00wEFv7hQ== SSHCerts\n"
                  }
                ]
              },
              "provisionVMAgent": true,
              "patchSettings": {
                "patchMode": "ImageDefault",
                "assessmentMode": "ImageDefault"
              },
              "enableVMAgentPlatformUpdates": false
            },
            "secrets": [],
            "allowExtensionOperations": true,
            "requireGuestProvisionSignal": true
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic277474ff42884",
                "properties": {
                  "primary": true
                }
              }
            ]
          },
          "provisioningState": "Succeeded",
          "timeCreated": "2023-07-27T01:56:54.6053498\u002B00:00"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Thu, 27 Jul 2023 01:57:44 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "0cb7a0b2-68f4-42f5-95d3-df19f0b3bda2",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "13080",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:57:45 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "7c9e2423-3284-46d2-bafb-19adb68d85d2",
        "x-ms-client-request-id": "0cb7a0b2-68f4-42f5-95d3-df19f0b3bda2",
        "x-ms-correlation-request-id": "e99213c6-e9be-414f-8eb5-ad20e1f52e90",
        "x-ms-ratelimit-remaining-subscription-reads": "11983",
        "x-ms-request-id": "1845c90b-9009-4eca-9315-b759f1f35d9c",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015745Z:e99213c6-e9be-414f-8eb5-ad20e1f52e90"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "bensg54509dddd3de",
            "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de",
            "etag": "W/\u0022e5cbecf0-d844-4be6-96e7-4bd5862d3b84\u0022",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus",
            "tags": {},
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "b300c5f9-5a74-45d0-b8fd-72d7df089211",
              "securityRules": [
                {
                  "name": "ALLOW-SQL",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/securityRules/ALLOW-SQL",
                  "etag": "W/\u0022e5cbecf0-d844-4be6-96e7-4bd5862d3b84\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow SQL",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "1433",
                    "sourceAddressPrefix": "172.16.1.0/24",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DENY-WEB",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/securityRules/DENY-WEB",
                  "etag": "W/\u0022e5cbecf0-d844-4be6-96e7-4bd5862d3b84\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny Web",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 200,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\u0022e5cbecf0-d844-4be6-96e7-4bd5862d3b84\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\u0022e5cbecf0-d844-4be6-96e7-4bd5862d3b84\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\u0022e5cbecf0-d844-4be6-96e7-4bd5862d3b84\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\u0022e5cbecf0-d844-4be6-96e7-4bd5862d3b84\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\u0022e5cbecf0-d844-4be6-96e7-4bd5862d3b84\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/bensg54509dddd3de/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\u0022e5cbecf0-d844-4be6-96e7-4bd5862d3b84\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "networkInterfaces": [
                {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic277474ff42884"
                }
              ]
            }
          },
          {
            "name": "fensg287016ab2bf4",
            "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4",
            "etag": "W/\u0022053cadfb-535b-4972-8cd4-d870a7b79348\u0022",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus",
            "tags": {},
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "d1975851-4490-418a-a966-cd9ef9cf7527",
              "securityRules": [
                {
                  "name": "ALLOW-HTTP",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/securityRules/ALLOW-HTTP",
                  "etag": "W/\u0022053cadfb-535b-4972-8cd4-d870a7b79348\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow HTTP",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "80",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 101,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "ALLOW-SSH",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/securityRules/ALLOW-SSH",
                  "etag": "W/\u0022053cadfb-535b-4972-8cd4-d870a7b79348\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow SSH",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "22",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\u0022053cadfb-535b-4972-8cd4-d870a7b79348\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\u0022053cadfb-535b-4972-8cd4-d870a7b79348\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\u0022053cadfb-535b-4972-8cd4-d870a7b79348\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\u0022053cadfb-535b-4972-8cd4-d870a7b79348\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\u0022053cadfb-535b-4972-8cd4-d870a7b79348\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\u0022053cadfb-535b-4972-8cd4-d870a7b79348\u0022",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "networkInterfaces": [
                {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic188633bdefa76"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "1739",
        "Content-Type": "application/json",
        "Date": "Thu, 27 Jul 2023 01:57:45 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "fe2aeb04-390c-480f-9389-09579620384c",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus",
        "tags": {},
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4",
        "properties": {
          "securityRules": [
            {
              "properties": {
                "description": "Allow FTP",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "20-21",
                "sourceAddressPrefix": "*",
                "sourceApplicationSecurityGroups": [],
                "destinationAddressPrefix": "*",
                "destinationApplicationSecurityGroups": [],
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound"
              },
              "name": "ALLOW-FTP"
            },
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/securityRules/ALLOW-HTTP",
              "properties": {
                "description": "Allow HTTP",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "access": "Allow",
                "priority": 101,
                "direction": "Inbound"
              },
              "name": "ALLOW-HTTP",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules"
            },
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/securityRules/ALLOW-SSH",
              "properties": {
                "description": "Allow SSH",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefix": "*",
                "destinationAddressPrefixes": [],
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              },
              "name": "ALLOW-SSH",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules"
            }
          ]
        }
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operations/66c08c48-da20-4f34-a51d-fd32416fdcc3?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "7203",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:57:45 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "77e51062-fd5d-4577-9a9d-f7c1ae202d93",
        "x-ms-client-request-id": "fe2aeb04-390c-480f-9389-09579620384c",
        "x-ms-correlation-request-id": "ea3f191b-1dbe-43cd-8d78-054a7c8ec1fa",
        "x-ms-ratelimit-remaining-subscription-writes": "1195",
        "x-ms-request-id": "66c08c48-da20-4f34-a51d-fd32416fdcc3",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015746Z:ea3f191b-1dbe-43cd-8d78-054a7c8ec1fa"
      },
      "ResponseBody": {
        "name": "fensg287016ab2bf4",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4",
        "etag": "W/\u0022aef14bca-e18e-4ebc-a707-ce4711a7433e\u0022",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "d1975851-4490-418a-a966-cd9ef9cf7527",
          "securityRules": [
            {
              "name": "ALLOW-FTP",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/securityRules/ALLOW-FTP",
              "etag": "W/\u0022aef14bca-e18e-4ebc-a707-ce4711a7433e\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow FTP",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "20-21",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "ALLOW-HTTP",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/securityRules/ALLOW-HTTP",
              "etag": "W/\u0022aef14bca-e18e-4ebc-a707-ce4711a7433e\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow HTTP",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 101,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "ALLOW-SSH",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/securityRules/ALLOW-SSH",
              "etag": "W/\u0022aef14bca-e18e-4ebc-a707-ce4711a7433e\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow SSH",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\u0022aef14bca-e18e-4ebc-a707-ce4711a7433e\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\u0022aef14bca-e18e-4ebc-a707-ce4711a7433e\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\u0022aef14bca-e18e-4ebc-a707-ce4711a7433e\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\u0022aef14bca-e18e-4ebc-a707-ce4711a7433e\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\u0022aef14bca-e18e-4ebc-a707-ce4711a7433e\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\u0022aef14bca-e18e-4ebc-a707-ce4711a7433e\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "networkInterfaces": [
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic188633bdefa76"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/66c08c48-da20-4f34-a51d-fd32416fdcc3?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:57:46 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "f067188b-a298-4a08-b6be-e24e987c87c3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:57:47 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a4e93cfc-5a75-40a1-9fc7-51c95a2d31e6",
        "x-ms-client-request-id": "f067188b-a298-4a08-b6be-e24e987c87c3",
        "x-ms-correlation-request-id": "7c605d17-55c6-4463-8aea-971dd99ac68d",
        "x-ms-ratelimit-remaining-subscription-reads": "11968",
        "x-ms-request-id": "d1e48433-7892-4257-87eb-9e9bf0370369",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015748Z:7c605d17-55c6-4463-8aea-971dd99ac68d"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Thu, 27 Jul 2023 01:57:47 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "9806d17b-ea40-4c30-a46b-5f620c4c7dfa",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "7213",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Thu, 27 Jul 2023 01:57:47 GMT",
        "ETag": "W/\u0022e8d3eeb0-c8f3-45e3-a774-79498a35c185\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "911897fc-f048-4f8e-b8c6-ba28d48afd1a",
        "x-ms-client-request-id": "9806d17b-ea40-4c30-a46b-5f620c4c7dfa",
        "x-ms-correlation-request-id": "331206d9-a4c3-42a0-b8d3-8f9635c49603",
        "x-ms-ratelimit-remaining-subscription-reads": "11967",
        "x-ms-request-id": "97d11723-e6d5-48be-86da-87ecc3e45303",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015748Z:331206d9-a4c3-42a0-b8d3-8f9635c49603"
      },
      "ResponseBody": {
        "name": "fensg287016ab2bf4",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4",
        "etag": "W/\u0022e8d3eeb0-c8f3-45e3-a774-79498a35c185\u0022",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "d1975851-4490-418a-a966-cd9ef9cf7527",
          "securityRules": [
            {
              "name": "ALLOW-FTP",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/securityRules/ALLOW-FTP",
              "etag": "W/\u0022e8d3eeb0-c8f3-45e3-a774-79498a35c185\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow FTP",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "20-21",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "ALLOW-HTTP",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/securityRules/ALLOW-HTTP",
              "etag": "W/\u0022e8d3eeb0-c8f3-45e3-a774-79498a35c185\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow HTTP",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 101,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "ALLOW-SSH",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/securityRules/ALLOW-SSH",
              "etag": "W/\u0022e8d3eeb0-c8f3-45e3-a774-79498a35c185\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow SSH",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\u0022e8d3eeb0-c8f3-45e3-a774-79498a35c185\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\u0022e8d3eeb0-c8f3-45e3-a774-79498a35c185\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\u0022e8d3eeb0-c8f3-45e3-a774-79498a35c185\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\u0022e8d3eeb0-c8f3-45e3-a774-79498a35c185\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\u0022e8d3eeb0-c8f3-45e3-a774-79498a35c185\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkSecurityGroups/fensg287016ab2bf4/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\u0022e8d3eeb0-c8f3-45e3-a774-79498a35c185\u0022",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "networkInterfaces": [
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rgnems15776bb6620/providers/Microsoft.Network/networkInterfaces/nic188633bdefa76"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/rgnems15776bb6620?api-version=2022-09-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Thu, 27 Jul 2023 01:57:48 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.resources/2.29.0-beta.1 (17; Windows 10; 10.0)",
        "x-ms-client-request-id": "36f33219-9d36-4364-bf3e-7ff90f1e9a61",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Thu, 27 Jul 2023 01:57:50 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/operationresults/eyJqb2JJZCI6IlJFU09VUkNFR1JPVVBERUxFVElPTkpPQi1SR05FTVMxNTc3NkJCNjYyMC1XRVNUVVMiLCJqb2JMb2NhdGlvbiI6Indlc3R1cyJ9?api-version=2022-09-01",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "583a5191-9a43-4fd7-8d85-b6812270a6c0",
        "x-ms-ratelimit-remaining-subscription-deletes": "14998",
        "x-ms-request-id": "583a5191-9a43-4fd7-8d85-b6812270a6c0",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230727T015750Z:583a5191-9a43-4fd7-8d85-b6812270a6c0"
      },
      "ResponseBody": null
    }
  ],
  "Variables": {
    "0": "fensg287016ab2bf4",
    "1": "bensg54509dddd3de",
    "10": "vm996678dd1",
    "11": "vm132365237",
    "2": "rgnems15776bb6620",
    "3": "vnet801077a11961",
    "4": "nic188633bdefa76",
    "5": "nic277474ff42884",
    "6": "pip108910a3e2126",
    "7": "fevm39775f13d325",
    "8": "bevm29412cc08bd8",
    "9": "pip49416a69"
  }
}
